# python-project-52

./: .env.example  .gitignore  Makefile  Procfile  README.md  build.sh  database.sql  pyproject.toml  pytest.ini  render.yaml  requirements.txt  setup.cfg  urls.py
.github/workflows/: python-ci.yml
hexlet_code/: settings.py  urls.py
task_manager/: filters.py  forms.py  mixins.py  models.py  settings.py  test_users.py  tests.py  urls.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  users.json
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/fixtures/: labels.json
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/templates/labels/: delete.html  edit.html  index.html  new.html
task_manager/migrations/: 0001_initial.py  0002_label_task.py  0003_rename_assigned_to_task_assignee_task_name_and_more.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/fixtures/: statuses.json
task_manager/statuses/migrations/: 0001_initial.py  0002_status_created_at.py
task_manager/statuses/templates/: delete.html  edit.html  index.html  new.html
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/fixtures/: tasks.json
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0002_task_labels_alter_task_description_and_more.py  0003_alter_task_author_alter_task_executor_and_more.py
task_manager/tasks/templates/tasks/: delete.html  edit.html  new.html  task_filter.html  view.html
task_manager/templates/: base.html  delete.html  form.html  index.html
task_manager/templates/errors/: error_404.html  error_500.html
task_manager/templates/labels/: labels.html
task_manager/templates/layout/: base.html  footer.html  header.html
task_manager/templates/statuses/: statuses.html
task_manager/templates/task_manager/: home.html  label_confirm_delete.html  label_form.html  label_list.html  status_confirm_delete.html  status_form.html  status_list.html  task_confirm_delete.html  task_detail.html  task_form.html  task_list.html
task_manager/templates/tasks/: task_detail.html  tasks.html
task_manager/templates/users/: list.html
task_manager/tests/: __init__.py  authentication.py  test_user_crud.py  test_user_views.py
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/fixtures/: users.json
task_manager/users/migrations/: 0001_initial.py  0002_alter_user_groups_alter_user_user_permissions.py
task_manager/users/templates/: application.html
task_manager/views/: users.py
templates/: base.html
(+19 files in other folders)
