[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Samvel Kocharyan <poweredbyskx@gmail.com>"]
readme = "README.md"
repository = "https://github.com/poweredbyskx/hexlet-code"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
gunicorn = "^21.2.0"
django-bootstrap5 = "^23.4"
django-filter = "^24.2"
rollbar = "^0.16.3"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
dj-database-url = "^2.1.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
coverage = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "hexlet-code"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Samvel Kocharyan", email = "poweredbyskx@gmail.com"}
]
