[project]
name = "hexlet-code"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Samvel Kocharyan", email = "poweredbyskx@gmail.com" }
]
dependencies = [
  "Django>=4.2",
  "gunicorn>=21.2.0",
  "django-bootstrap5>=23.4",
  "django-filter>=24.2",
  "rollbar>=0.16.3",
  "python-dotenv>=1.0.1",
  "psycopg2-binary>=2.9.9",
  "dj-database-url>=2.1.0",
  "pytest-django>=4.11.1"
]

[project.optional-dependencies]
dev = [
  "flake8>=7.0.0",
  "coverage>=7.4.3"
]

[project.urls]
repository = "https://github.com/poweredbyskx/hexlet-code"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "task_manager.settings"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
